Renaming 'complain' to 'complaint' in APIs.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -32,7 +32,7 @@
   "avatar-shape" : "Avatar shape",
   "avatar-too-small" : "Avatar image size should be at least 100x100 pixels.",
   "back-to-feed" : "← {feed}",
-  "back-to-list-complains" : "← List of complaints",
+  "back-to-list-complaints" : "← List of complaints",
   "banned-android-google-play" : "Banned on Android (Google Play)",
   "banned-content-android-google-play" : "All content banned on Android (Google Play)",
   "bio" : "Bio",
@@ -76,13 +76,13 @@
   "comments-visible-to" : "Comments are visible to",
   "comment-title" : "Comment",
   "comment-updated-at" : "updated",
-  "complain-heading" : {
+  "complaint-heading" : {
     "blog" : "Blog {name}",
     "comment" : "Comment by {commentName} \"{commentHeading}\" in the post by {postingName} \"{postingHeading}\"",
     "post" : "Post by {name} \"{heading}\""
   },
-  "complains" : "Complaints",
-  "complain-status" : {
+  "complaints" : "Complaints",
+  "complaint-status" : {
     "approved" : "Approved",
     "invalid-target" : "Incorrect data",
     "not-found" : "Not found",
@@ -93,7 +93,7 @@
     "prepare-failed" : "Could not be processed",
     "rejected" : "Rejected"
   },
-  "complain-status-colon" : "Complaint status:",
+  "complaint-status-colon" : "Complaint status:",
   "compress-images" : "Compress images",
   "confirm-password" : "Confirm password",
   "connect" : "Log In",
@@ -127,7 +127,7 @@
   "danger-request-delete-blog" : "<1>Danger!</1> By submitting this form, you send a request to your Moera provider to <0>delete your blog completely with all the data, including all personal information</0>. All your data will be <0>lost without recovery</0>. Press this button only if you are absolutely sure!",
   "decision" : "Decision",
   "decision-sheriff-initiative" : "The decision was made at the sheriff's initiative.",
-  "decision-upon-complain" : "The decision was made upon <0>a complaint</0> by another user.",
+  "decision-upon-complaint" : "The decision was made upon <0>a complaint</0> by another user.",
   "defrosting-message-box" : "\uD83C\uDF89 <b>We are thrilled to see you again after such a long absence!</b><br><br>Many great new things have been added to Moera since then. Look around while your feed is being filled with new posts.",
   "delete" : "Delete",
   "delete-account-moera" : "Delete my account in Moera",
@@ -331,8 +331,8 @@
       "reaction-added" : "{reactions} your post {heading}",
       "remote-comment-added" : "{comments} commented on {posting} {heading} {reason}",
       "reply-comment" : "{replies} replied to your comment {heading} on {posting}",
-      "sheriff-complain-added" : "You have received a new complaint",
-      "sheriff-complain-decided" : "Sheriff has responded to your complaint on {target}",
+      "sheriff-complaint-added" : "You have received a new complaint",
+      "sheriff-complaint-decided" : "Sheriff has responded to your complaint on {target}",
       "sheriff-marked" : "Sheriff has hidden {target} on Android",
       "sheriff-unmarked" : "Sheriff has revealed {target} on Android",
       "subscriber-added" : "{node} subscribed to your {feed}",
@@ -413,14 +413,14 @@
   "no-requests-available" : "No requests available.",
   "not-allowed" : "Not allowed",
   "not-connected-home" : "Not logged in",
-  "note-complains-public" : "<b>Note:</b> All complaints to the sheriff are public. You can ask not to publish your complaint for some reason, but the final decision is made by the sheriff.",
+  "note-complaints-public" : "<b>Note:</b> All complaints to the sheriff are public. You can ask not to publish your complaint for some reason, but the final decision is made by the sheriff.",
   "no-text" : "(no text)",
   "not-following-comments" : "Not following comments",
   "nothing-yet" : "Nothing yet.",
   "notify-about-update" : "Notify followers about the update",
   "notify-followers" : "Notify followers",
-  "not-publish-my-complain" : "Please, do not publish my complaint",
-  "not-show-complains" : "Do not show complaints",
+  "not-publish-my-complaint" : "Please, do not publish my complaint",
+  "not-show-complaints" : "Do not show complaints",
   "not-specified" : "Not specified",
   "not-subscribed" : "Not subscribed",
   "not-subscribed-friend" : "You are not yet subscribed to your friend. Do you want to subscribe?",
@@ -771,7 +771,7 @@
   "share" : "Share",
   "share-ellipsis" : "Share...",
   "share-page" : "Share page",
-  "sheriff-decided-not-publish-complains" : "The sheriff decided not to publish the complaints.",
+  "sheriff-decided-not-publish-complaints" : "The sheriff decided not to publish the complaints.",
   "sheriff-order" : "Sheriff's Order",
   "sheriff-order-reason" : {
     "copyright" : "Copyright infringement",
@@ -867,18 +867,18 @@
   "upload-too-large" : "File \"{name}\" cannot be uploaded because its size ({size}) is larger than maximum allowed size ({maxSize})",
   "url" : "URL",
   "used-by-addon" : "Used by add-on:",
-  "user-asks-not-publish-complain" : "User asks not to publish the complaint",
+  "user-asks-not-publish-complaint" : "User asks not to publish the complaint",
   "user-comments-hidden" : "This user's comments are hidden",
   "verify-signature" : "Verify signature",
   "view-as-chart" : "View as chart",
   "view-as-list" : "View as list",
   "view-comments" : "View comments",
-  "view-complains" : "View complaints",
+  "view-complaints" : "View complaints",
   "view-earlier-comments" : "View earlier comments",
   "view-images-grid" : "View images as grid",
   "view-images-list" : "View images as list",
   "view-later-comments" : "View later comments",
-  "view-previous-complains" : "View previous complaints",
+  "view-previous-complaints" : "View previous complaints",
   "view-source" : "View source",
   "view-source-title" : "View Source",
   "visibility" : "Visibility",
