--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -32,7 +32,7 @@
   "avatar-shape" : "Kształt awatara",
   "avatar-too-small" : "Rozmiar obrazka awatara powinien wynosić co najmniej 100x100 pikseli.",
   "back-to-feed" : "← {feed}",
-  "back-to-list-complains" : "← Lista komentarzy",
+  "back-to-list-complaints" : "← Lista komentarzy",
   "banned-android-google-play" : "Zablokowany na Androidzie (Google Play)",
   "banned-content-android-google-play" : "Wszystkie treści zakazane na Androidzie (Google Play)",
   "bio" : "Opis",
@@ -76,13 +76,13 @@
   "comments-visible-to" : "Komentarze są widoczne dla",
   "comment-title" : "Komentarz",
   "comment-updated-at" : "zaktualizowany",
-  "complain-heading" : {
+  "complaint-heading" : {
     "blog" : "Blog {name}",
     "comment" : "Komentarz {commentName} \"{commentHeading}\" do posta {postingName} \"{postingHeading}\"",
     "post" : "Post {name} \"{heading}\""
   },
-  "complains" : "Skargi",
-  "complain-status" : {
+  "complaints" : "Skargi",
+  "complaint-status" : {
     "approved" : "Zatwierdzone",
     "invalid-target" : "Nieprawidłowe dane",
     "not-found" : "Nie znaleziono",
@@ -93,7 +93,7 @@
     "prepare-failed" : "Nie mógł być przetwarzany",
     "rejected" : "Odrzucone"
   },
-  "complain-status-colon" : "Stan skargi",
+  "complaint-status-colon" : "Stan skargi",
   "compress-images" : "Kompresuj obrazy",
   "confirm-password" : "Potwierdź hasło",
   "connect" : "Zaloguj się",
@@ -127,7 +127,7 @@
   "danger-request-delete-blog" : "<1>Niebezpieczeństwo!</1> Przesyłając ten formularz, wysyłasz prośbę do swojego dostawcy Moera o <0>całkowite usunięcie Twojego bloga wraz ze wszystkimi danymi, w tym wszystkimi danymi osobowymi</0>. Wszystkie dane zostaną <0>utracone bez możliwości ich odzyskania</0>. Naciśnij ten przycisk tylko wtedy, gdy masz absolutną pewność!",
   "decision" : "Decyzja",
   "decision-sheriff-initiative" : "Decyzja została podjęta z inicjatywy szeryfa.",
-  "decision-upon-complain" : "Decyzja została podjęta po <0>skardze</0> złożonej przez innego użytkownika.",
+  "decision-upon-complaint" : "Decyzja została podjęta po <0>skardze</0> złożonej przez innego użytkownika.",
   "defrosting-message-box" : "\uD83C\uDF89 <b>Bardzo się cieszymy, że możemy Cię ponownie zobaczyć po tak długiej nieobecności!</b><br><br>Od tego czasu w Moera wydarzyło się wiele wspaniałych rzeczy. Rozejrzyj się, gdy Twój kanał zapełnia się nowymi postami.",
   "delete" : "Usuń",
   "delete-account-moera" : "Usuń moje konto w Moera",
@@ -331,8 +331,8 @@
       "reaction-added" : "{reactions} Twój post {heading}",
       "remote-comment-added" : "{comments} skomentował {posting} {heading} {reason}",
       "reply-comment" : "{replies} odpowiedział na Twój komentarz {heading} w {posting}",
-      "sheriff-complain-added" : "Otrzymałeś nową skargę",
-      "sheriff-complain-decided" : "Szeryf odpowiedział na Twoją skargę {target}",
+      "sheriff-complaint-added" : "Otrzymałeś nową skargę",
+      "sheriff-complaint-decided" : "Szeryf odpowiedział na Twoją skargę {target}",
       "sheriff-marked" : "Szeryf zakazał wyświetlanie {target} na Androidzie",
       "sheriff-unmarked" : "Szeryf zezwolił na wyświetlanie {target} na Androidzie",
       "subscriber-added" : "{node} zasubskrybował Twój {feed}",
@@ -413,14 +413,14 @@
   "no-requests-available" : "Brak dostępnych żądań.",
   "not-allowed" : "Nie dozwolone",
   "not-connected-home" : "Nie zalogowano",
-  "note-complains-public" : "<b>Uwaga:</b> wszystkie skargi kierowane do szeryfa są publiczne. Możesz poprosić o niepublikowanie Twojej skargi z jakiegokolwiek powodu, ale ostateczna decyzja należy do szeryfa.",
+  "note-complaints-public" : "<b>Uwaga:</b> wszystkie skargi kierowane do szeryfa są publiczne. Możesz poprosić o niepublikowanie Twojej skargi z jakiegokolwiek powodu, ale ostateczna decyzja należy do szeryfa.",
   "no-text" : "(brak tekstu)",
   "not-following-comments" : "Nie śledzi komentarzy",
   "nothing-yet" : "Jeszcze nic.",
   "notify-about-update" : "Powiadom obserwujących o aktualizacji",
   "notify-followers" : "Powiadom obserwujących",
-  "not-publish-my-complain" : "Proszę nie publikować mojej skargi",
-  "not-show-complains" : "Nie pokazuj skarg",
+  "not-publish-my-complaint" : "Proszę nie publikować mojej skargi",
+  "not-show-complaints" : "Nie pokazuj skarg",
   "not-specified" : "Nie określono",
   "not-subscribed" : "Nie zasubskrybowano",
   "not-subscribed-friend" : "Nie subskrybujesz jeszcze swojego znajomego. Czy chcesz subskrybować?",
@@ -771,7 +771,7 @@
   "share" : "Udostępnij",
   "share-ellipsis" : "Udostępnij...",
   "share-page" : "Udostępnij stronę",
-  "sheriff-decided-not-publish-complains" : "Szeryf zdecydował się nie publikować skarg.",
+  "sheriff-decided-not-publish-complaints" : "Szeryf zdecydował się nie publikować skarg.",
   "sheriff-order" : "Rozkaz szeryfa",
   "sheriff-order-reason" : {
     "copyright" : "Naruszenie praw autorskich",
@@ -867,18 +867,18 @@
   "upload-too-large" : "Plik \"{name}\" nie może zostać wgrany, ponieważ jego rozmiar ({size}) jest większy niż maksymalny dozwolony rozmiar ({maxSize})",
   "url" : "URL",
   "used-by-addon" : "Używane przez dodatek:",
-  "user-asks-not-publish-complain" : "Użytkownik prosi o niepublikowanie niniejszej skargi",
+  "user-asks-not-publish-complaint" : "Użytkownik prosi o niepublikowanie niniejszej skargi",
   "user-comments-hidden" : "Komentarze tego użytkownika są ukryte",
   "verify-signature" : "Zweryfikuj podpis",
   "view-as-chart" : "Wyświetl jako wykres",
   "view-as-list" : "Wyświetl jako listę",
   "view-comments" : "Wyświetl komentarze",
-  "view-complains" : "Pokaż skargi",
+  "view-complaints" : "Pokaż skargi",
   "view-earlier-comments" : "Wyświetl wcześniejsze komentarze",
   "view-images-grid" : "Wyświetl obrazy jako siatkę",
   "view-images-list" : "Wyświetl obrazy jako listę",
   "view-later-comments" : "Wyświetl późniejsze komentarze",
-  "view-previous-complains" : "Pokaż poprzednie skargi",
+  "view-previous-complaints" : "Pokaż poprzednie skargi",
   "view-source" : "Wyświetl źródło",
   "view-source-title" : "Wyświetl źródło",
   "visibility" : "Widoczność",
