--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -32,7 +32,7 @@
   "avatar-shape" : "Форма аватарки",
   "avatar-too-small" : "Размер картинки для аватарки должен быть хотя бы 100x100 пикселов",
   "back-to-feed" : "← {feed}",
-  "back-to-list-complains" : "← Список жалоб",
+  "back-to-list-complaints" : "← Список жалоб",
   "banned-android-google-play" : "Запрещено к показу на Android (Google Play)",
   "banned-content-android-google-play" : "Весь контент запрещен на Android (Google Play)",
   "bio" : "О себе",
@@ -76,13 +76,13 @@
   "comments-visible-to" : "Комментарии видны",
   "comment-title" : "Комментарий",
   "comment-updated-at" : "изменён",
-  "complain-heading" : {
+  "complaint-heading" : {
     "blog" : "Блог {name}",
     "comment" : "Комментарий {commentName} \"{commentHeading}\" к посту {postingName} \"{postingHeading}\"",
     "post" : "Пост {name} \"{heading}\""
   },
-  "complains" : "Жалобы",
-  "complain-status" : {
+  "complaints" : "Жалобы",
+  "complaint-status" : {
     "approved" : "Одобрено",
     "invalid-target" : "Некорректные данные",
     "not-found" : "Не найдено",
@@ -93,7 +93,7 @@
     "prepare-failed" : "Не удалось обработать",
     "rejected" : "Отклонено"
   },
-  "complain-status-colon" : "Статус жалобы:",
+  "complaint-status-colon" : "Статус жалобы:",
   "compress-images" : "Сжимать картинки",
   "confirm-password" : "Подтверждение пароля",
   "connect" : "Войти",
@@ -127,7 +127,7 @@
   "danger-request-delete-blog" : "<1>Опасно!</1> Отправив эту форму, вы отправите своему провайдеру Moera запрос на <0>полное удаление вашего блога со всеми данными, включая всю личную информацию</0>. Все ваши данные будут <0>потеряны без возможности восстановления</0>. Нажимайте эту кнопку только если вы абсолютно уверены!",
   "decision" : "Решение",
   "decision-sheriff-initiative" : "Решение было принято по инициативе шерифа.",
-  "decision-upon-complain" : "Решение было принято по <0>жалобе</0> другого пользователя.",
+  "decision-upon-complaint" : "Решение было принято по <0>жалобе</0> другого пользователя.",
   "defrosting-message-box" : "\uD83C\uDF89 <b>Мы очень рады снова видеть вас после столь долгого отсутствия!</b><br><br>Много замечательных вещей появилось в Moera с тех пор. Осмотритесь, пока ваша лента наполняется новыми постами.",
   "delete" : "Удалить",
   "delete-account-moera" : "Удалить мой аккаунт в Moera",
@@ -331,8 +331,8 @@
       "reaction-added" : "{reactions} ваш пост {heading}",
       "remote-comment-added" : "{comments} {count, plural, =1 {{gender, select, female {прокомментировала} other {прокомментировал}}} other {прокомментировали}} {posting} {heading}, {reason}",
       "reply-comment" : "{replies} {count, plural, =1 {{gender, select, female {ответила} other {ответил}}} other {ответили}} на ваш комментарий {heading} к {posting}",
-      "sheriff-complain-added" : "Вы получили новую жалобу",
-      "sheriff-complain-decided" : "Шериф ответил на вашу жалобу на {target}",
+      "sheriff-complaint-added" : "Вы получили новую жалобу",
+      "sheriff-complaint-decided" : "Шериф ответил на вашу жалобу на {target}",
       "sheriff-marked" : "Шериф запретил показывать {target} на Android",
       "sheriff-unmarked" : "Шериф разрешил показывать {target} на Android",
       "subscriber-added" : "{node} {gender, select, female {подписалась} other {подписался}} на вашу ленту {feed}",
@@ -413,14 +413,14 @@
   "no-requests-available" : "Нет доступных просьб.",
   "not-allowed" : "Недопустимо",
   "not-connected-home" : "Не вошли",
-  "note-complains-public" : "<b>Примечание:</b> Все жалобы шерифу являются общедоступными. Вы можете попросить не публиковать вашу жалобу по какой-либо причине, но окончательное решение принимает шериф.",
+  "note-complaints-public" : "<b>Примечание:</b> Все жалобы шерифу являются общедоступными. Вы можете попросить не публиковать вашу жалобу по какой-либо причине, но окончательное решение принимает шериф.",
   "no-text" : "(без текста)",
   "not-following-comments" : "Не слежу за комментариями",
   "nothing-yet" : "Тут пока пусто.",
   "notify-about-update" : "Уведомить подписчиков об обновлении",
   "notify-followers" : "Уведомить подписчиков",
-  "not-publish-my-complain" : "Пожалуйста, не публикуйте мою жалобу",
-  "not-show-complains" : "Не показывать жалобы",
+  "not-publish-my-complaint" : "Пожалуйста, не публикуйте мою жалобу",
+  "not-show-complaints" : "Не показывать жалобы",
   "not-specified" : "Не указана",
   "not-subscribed" : "Не {gender, select, female {подписан} other {подписана}}",
   "not-subscribed-friend" : "Вы еще не подписаны на своего друга. Хотите подписаться?",
@@ -771,7 +771,7 @@
   "share" : "Поделиться",
   "share-ellipsis" : "Поделиться...",
   "share-page" : "Поделиться страницей",
-  "sheriff-decided-not-publish-complains" : "Шериф принял решение не публиковать жалобы.",
+  "sheriff-decided-not-publish-complaints" : "Шериф принял решение не публиковать жалобы.",
   "sheriff-order" : "Приказ шерифа",
   "sheriff-order-reason" : {
     "copyright" : "Нарушение авторских прав",
@@ -867,18 +867,18 @@
   "upload-too-large" : "Файл \"{name}\" не может быть загружен, потому что его размер ({size}) больше максимально разрешенного ({maxSize})",
   "url" : "URL",
   "used-by-addon" : "Используется дополнением:",
-  "user-asks-not-publish-complain" : "Пользователь просит не публиковать эту жалобу",
+  "user-asks-not-publish-complaint" : "Пользователь просит не публиковать эту жалобу",
   "user-comments-hidden" : "Комментарии этого пользователя скрываются",
   "verify-signature" : "Проверить подпись",
   "view-as-chart" : "В виде диаграммы",
   "view-as-list" : "В виде списка",
   "view-comments" : "Показать комментарии",
-  "view-complains" : "Показать жалобы",
+  "view-complaints" : "Показать жалобы",
   "view-earlier-comments" : "Показать предыдущие комментарии",
   "view-images-grid" : "Показать картинки в виде мозаики",
   "view-images-list" : "Показать картинки в виде списка",
   "view-later-comments" : "Показать следующие комментарии",
-  "view-previous-complains" : "Показать предыдущие жалобы",
+  "view-previous-complaints" : "Показать предыдущие жалобы",
   "view-source" : "Показать исходный текст",
   "view-source-title" : "Показать исходный текст",
   "visibility" : "Видимость",
