--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -32,7 +32,7 @@
   "avatar-shape" : "Форма аватара",
   "avatar-too-small" : "Розмір картинки для аватара повинен бути хоча б 100x100 пікселів",
   "back-to-feed" : "← {feed}",
-  "back-to-list-complains" : "← Список скарг",
+  "back-to-list-complaints" : "← Список скарг",
   "banned-android-google-play" : "Заборонено до показу на Андроїд (Google Play)",
   "banned-content-android-google-play" : "Весь контент заборонений на Android (Google Play)",
   "bio" : "Про себе",
@@ -76,13 +76,13 @@
   "comments-visible-to" : "Коментарі видно",
   "comment-title" : "Коментар",
   "comment-updated-at" : "змінений",
-  "complain-heading" : {
+  "complaint-heading" : {
     "blog" : "Блог {name}",
     "comment" : "Коментар {commentName} \"{commentHeading}\" до поста {postingName} \"{postingHeading}\"",
     "post" : "Пост {name} \"{heading}\""
   },
-  "complains" : "Скарги",
-  "complain-status" : {
+  "complaints" : "Скарги",
+  "complaint-status" : {
     "approved" : "Затверджено",
     "invalid-target" : "Невірні дані",
     "not-found" : "Не знайдено",
@@ -93,7 +93,7 @@
     "prepare-failed" : "Не вдалося обробити",
     "rejected" : "Відхилено"
   },
-  "complain-status-colon" : "Статус скарги:",
+  "complaint-status-colon" : "Статус скарги:",
   "compress-images" : "Стискати картинки",
   "confirm-password" : "Підтвердження пароля",
   "connect" : "Увійти",
@@ -127,7 +127,7 @@
   "danger-request-delete-blog" : "<1>Небезпечно!</1> Надіславши цю форму, ви надсилаєте запит до вашого провайдера Moera на <0>повне видалення вашого блогу з усіма даними, включно з усією особистою інформацією</0>. Всі ваші дані будуть <0>втрачені без можливості відновлення</0>. Натискайте цю кнопку, тільки якщо ви абсолютно впевнені!",
   "decision" : "Рішення",
   "decision-sheriff-initiative" : "Рішення було прийнято за ініціативою шерифа.",
-  "decision-upon-complain" : "Рішення було прийнято за <0>скаргою</0> іншого користувача.",
+  "decision-upon-complaint" : "Рішення було прийнято за <0>скаргою</0> іншого користувача.",
   "defrosting-message-box" : "\uD83C\uDF89 <b>Ми дуже раді знову бачити вас після такої тривалої відсутності!</b><br><br>Багато чудових речей з'явилося в Moera з того часу. Подивіться, поки ваша стрічка наповнюється новими постами.",
   "delete" : "Видалити",
   "delete-account-moera" : "Видалити мій аккаунт у Moera",
@@ -331,8 +331,8 @@
       "reaction-added" : "{reactions} ваш пост {heading}",
       "remote-comment-added" : "{comments} {count, plural, =1 {{gender, select, female {прокоментувала} other {прокоментував}}} other {прокоментували}} {posting} {heading}, {reason}",
       "reply-comment" : "{replies} {count, plural, =1 {{gender, select, female {відповіла} other {відповів}}} other {відповіли}} на ваш коментар {heading} до {posting}",
-      "sheriff-complain-added" : "Ви отримали нову скаргу",
-      "sheriff-complain-decided" : "Шериф відповів на вашу скаргу на {target}",
+      "sheriff-complaint-added" : "Ви отримали нову скаргу",
+      "sheriff-complaint-decided" : "Шериф відповів на вашу скаргу на {target}",
       "sheriff-marked" : "Шериф заборонив показувати {target} на Android",
       "sheriff-unmarked" : "Шериф дозволив показувати {target} на Android",
       "subscriber-added" : "{node} {gender, select, female {підписалась} other {підписався}} на вашу стрічку {feed}",
@@ -413,14 +413,14 @@
   "no-requests-available" : "Немає доступних прохань.",
   "not-allowed" : "Неприпустимо",
   "not-connected-home" : "Не увійшли",
-  "note-complains-public" : "<b>Примітка:</b> Усі скарги шерифові є відкритими. Ви можете попросити не публікувати вашу скаргу з якоїсь причини, але остаточне рішення приймає шериф.",
+  "note-complaints-public" : "<b>Примітка:</b> Усі скарги шерифові є відкритими. Ви можете попросити не публікувати вашу скаргу з якоїсь причини, але остаточне рішення приймає шериф.",
   "no-text" : "(без текста)",
   "not-following-comments" : "Не слідкую за коментарями",
   "nothing-yet" : "Тут поки що порожньо.",
   "notify-about-update" : "Повідомити підписникам про оновлення",
   "notify-followers" : "Повідомити підписникам",
-  "not-publish-my-complain" : "Будь ласка, не публікуйте мою скаргу",
-  "not-show-complains" : "Не показувати скарги",
+  "not-publish-my-complaint" : "Будь ласка, не публікуйте мою скаргу",
+  "not-show-complaints" : "Не показувати скарги",
   "not-specified" : "Не вказана",
   "not-subscribed" : "Не {gender, select, female {підписаний} other {підписана}}",
   "not-subscribed-friend" : "Ви ще не підписані на свого друга. Бажаєте підписатися?",
@@ -771,7 +771,7 @@
   "share" : "Поділитися",
   "share-ellipsis" : "Поділитися...",
   "share-page" : "Поділитися сторінкою",
-  "sheriff-decided-not-publish-complains" : "Шериф прийняв рішення не публікувати скарги.",
+  "sheriff-decided-not-publish-complaints" : "Шериф прийняв рішення не публікувати скарги.",
   "sheriff-order" : "Наказ шерифа",
   "sheriff-order-reason" : {
     "copyright" : "Порушення авторських прав",
@@ -867,18 +867,18 @@
   "upload-too-large" : "Файл \"{name}\" не може бути надісланий, тому що його розмір ({size}) більший за максимально дозволений ({maxSize})",
   "url" : "URL",
   "used-by-addon" : "Використовується додатком:",
-  "user-asks-not-publish-complain" : "Користувач просить не публікувати цю скаргу",
+  "user-asks-not-publish-complaint" : "Користувач просить не публікувати цю скаргу",
   "user-comments-hidden" : "Коментарі цього користувача приховуються",
   "verify-signature" : "Перевірити підпис",
   "view-as-chart" : "У вигляді діаграми",
   "view-as-list" : "У вигляді списку",
   "view-comments" : "Показати коментарі",
-  "view-complains" : "Показати скарги",
+  "view-complaints" : "Показати скарги",
   "view-earlier-comments" : "Показати попередні коментарі",
   "view-images-grid" : "Показати картинки у вигляді мозаїки",
   "view-images-list" : "Показати картинки у вигляді списку",
   "view-later-comments" : "Показати наступні коментарі",
-  "view-previous-complains" : "Показати попередні скарги",
+  "view-previous-complaints" : "Показати попередні скарги",
   "view-source" : "Показати початковий текст",
   "view-source-title" : "Показати початковий текст",
   "visibility" : "Видимість",
