Choosing permissions when creating a token.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -448,6 +448,7 @@
   "passwords-different" : "Passwords are different",
   "paste-with-formatting" : "Paste text with formatting",
   "people" : "People",
+  "permissions" : "Permissions",
   "pin" : "Pin",
   "pinned-post" : "Pinned post",
   "post-button" : "Post",
@@ -564,6 +565,40 @@
   "rotate-left" : "Rotate left",
   "rotate-right" : "Rotate right",
   "save" : "Save",
+  "scope" : {
+    "add-comment" : "Create comments owned by the node",
+    "add-post" : "Create posts owned by the node",
+    "all" : "All permissions",
+    "block" : "Block and unblock people",
+    "delete-others-content" : "Delete any content not owned by the node, but stored on it",
+    "delete-own-content" : "Delete any content owned by the node",
+    "drafts" : "Use drafts",
+    "friend" : "Add and remove friends and friend groups",
+    "grant" : "Grant administrative permission on this node to other nodes",
+    "name" : "Update the name of the node",
+    "other" : "Other permissions",
+    "plugins" : "Administrate plugins",
+    "react" : "Create and delete reactions owned by the node",
+    "remote-identify" : "Create cartes for authentication on other nodes",
+    "sheriff" : "Use sheriff's powers",
+    "subscribe" : "Subscribe and unsubscribe to feeds",
+    "tokens" : "Manage authentication tokens",
+    "update-comment" : "Modify comments owned by the node",
+    "update-feeds" : "Modify status of stories in feeds",
+    "update-post" : "Modify posts owned by the node",
+    "update-profile" : "Change the profile",
+    "update-settings" : "Modify the node settings",
+    "upload-private-media" : "Upload a private media file",
+    "upload-public-media" : "Upload a public media file",
+    "user-lists" : "Modify lists of users",
+    "view-all" : "All view-only permissions",
+    "view-content" : "View any content (posts, comments, reactions), except media files",
+    "view-feeds" : "View all feeds and status of stories in them",
+    "view-media" : "View any media file",
+    "view-people" : "View all contacts of the node",
+    "view-profile" : "View all fields of the profile",
+    "view-settings" : "View the node settings"
+  },
   "secret-code" : "Secret code",
   "secret-words" : "Secret Words",
   "select" : "Select",
@@ -825,7 +860,7 @@
   "title" : "Title",
   "token-copied" : "Token copied to the clipboard",
   "token-name" : "Token name",
-  "token-usage-warning" : "Please note that the token gives full admin access to your blog. Never give it to anybody you don't trust!",
+  "token-usage-warning" : "Please note that the token gives admin access to your blog. Never give it to anybody you don't trust!",
   "too-long" : "Too long",
   "tooltip" : "Tooltip",
   "top" : "Top",
