--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -448,6 +448,7 @@
   "passwords-different" : "Hasła są różne",
   "paste-with-formatting" : "Wklej tekst z formatowaniem",
   "people" : "Ludzie",
+  "permissions" : "Uprawnienia",
   "pin" : "Przypnij",
   "pinned-post" : "Przypięty post",
   "post-button" : "Opublikuj",
@@ -825,7 +826,7 @@
   "title" : "Tytuł",
   "token-copied" : "Token skopiowany do schowka",
   "token-name" : "Nazwa tokenu",
-  "token-usage-warning" : "Prosimy pamiętać, że token daje pełny dostęp do bloga. Nigdy nie udostępniaj go osobom, którym nie ufasz!",
+  "token-usage-warning" : "Prosimy pamiętać, że token daje dostęp do bloga. Nigdy nie udostępniaj go osobom, którym nie ufasz!",
   "too-long" : "Zbyt długi",
   "tooltip" : "Podpowiedź",
   "top" : "Góra",
