--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -448,6 +448,7 @@
   "passwords-different" : "Пароли различаются",
   "paste-with-formatting" : "Вставить текст с форматированием",
   "people" : "Люди",
+  "permissions" : "Полномочия",
   "pin" : "Прикрепить",
   "pinned-post" : "Прикреплённый",
   "post-button" : "Опубликовать",
@@ -825,7 +826,7 @@
   "title" : "Заголовок",
   "token-copied" : "Токен скопирован в буфер обмена",
   "token-name" : "Имя токена",
-  "token-usage-warning" : "Имейте в виду, что токен даёт полный доступ к вашему блогу с правами администратора. Никогда не передавайте его тому, кому вы не доверяете!",
+  "token-usage-warning" : "Имейте в виду, что токен даёт доступ к вашему блогу с правами администратора. Никогда не передавайте его тому, кому вы не доверяете!",
   "too-long" : "Слишком длинно",
   "tooltip" : "Подсказка",
   "top" : "В конец",
