--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -448,6 +448,7 @@
   "passwords-different" : "Паролі відмінні",
   "paste-with-formatting" : "Вставити текст із форматуванням",
   "people" : "Люди",
+  "permissions" : "Повноваження",
   "pin" : "Прикріпити",
   "pinned-post" : "Прикріплений",
   "post-button" : "Опублікувати",
@@ -825,7 +826,7 @@
   "title" : "Заголовок",
   "token-copied" : "Токен скопійований до буфера обміну",
   "token-name" : "Ім'я токена",
-  "token-usage-warning" : "Майте на увазі, що токен дає повний доступ до вашого блогу з правами адміністратора. Ніколи не передавайте його тому, кому ви не довіряєте!",
+  "token-usage-warning" : "Майте на увазі, що токен дає доступ до вашого блогу з правами адміністратора. Ніколи не передавайте його тому, кому ви не довіряєте!",
   "too-long" : "Занадто довго",
   "tooltip" : "Підказка",
   "top" : "У кінець",
